--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
     "gulp-less": "^3.2.0",
     "gulp-rename": "^1.2.2",
     "nodemon": "^1.11.0"
+  },
+  "standard": {
+    "ignore": [
+      "/public/"
+    ]
   }
 }
