--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "inert": "^4.0.2",
     "joi": "^9.2.0",
     "mongoose": "^4.6.7",
+    "request": "^2.78.0",
     "standard": "^8.5.0",
     "vision": "^4.1.0",
     "yar": "^8.1.0"
