Build css and js when pushed to build server

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "setup": "npm install && gulp setup",
     "dev": "gulp",
-    "test": "standard"
+    "test": "standard",
+    "postinstall": "gulp setup"
   },
   "repository": {
     "type": "git",
