--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Website for Nebulis",
   "main": "index.js",
   "scripts": {
-    "setup": "npm install && gulp setup",
+    "setup": "npm install && bower install && gulp setup",
     "dev": "gulp",
     "test": "standard",
     "postinstall": "gulp setup"
