--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/nebulis-io/website#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "handlebars": "^4.0.5",
     "hapi": "^15.2.0",
     "inert": "^4.0.2",
