--- a/package.json
+++ b/package.json
@@ -26,12 +26,28 @@
   "homepage": "https://github.com/nebulis-io/website#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
+    "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "handlebars": "^4.0.5",
     "handlebars-extend-block": "^1.0.0",
+    "handlebars-layouts": "^3.1.4",
     "hapi": "^15.2.0",
+    "hbs": "^4.0.1",
     "inert": "^4.0.2",
     "joi": "^9.2.0",
     "mongoose": "^4.6.7",
+    "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.0.0",
     "request": "^2.78.0",
     "standard": "^8.5.0",
     "vision": "^4.1.0",
